--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-  <meta
-  name="description"
-  content="Discover exquisite jewelry collections including rings, necklaces, bracelets, and earrings. Shop high-quality, handcrafted pieces perfect for every occasion. Fast shipping and secure payment options available."
-/>
+    <meta
+      name="description"
+      content="Discover exquisite jewelry collections including rings, necklaces, bracelets, and earrings. Shop high-quality, handcrafted pieces perfect for every occasion. Fast shipping and secure payment options available."
+    />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -16,11 +16,14 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/icon?family=Material+Icons"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -46,5 +49,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://static.zohocdn.com/zpay/zpay-js/v1/zpayments.js"></script>
   </body>
 </html>
